--- a/app/src/main/res/xml/color_picker_diagram.xml
+++ b/app/src/main/res/xml/color_picker_diagram.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <com.skydoves.colorpickerpreference.ColorPickerView
+        android:id="@+id/colorPickerView"
+        android:layout_width="249dp"
+        android:layout_height="249dp"
+        android:layout_gravity="center"
+        app:palette="@drawable/palette"
+        app:selector="@drawable/wheel" />
 
 </PreferenceScreen>
