--- a/app/src/main/res/layout/ac.xml
+++ b/app/src/main/res/layout/ac.xml
@@ -111,7 +111,7 @@
 
                     <TextView
                         android:id="@+id/Temperature"
-                        android:layout_width="93dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
                         android:text="@string/Temperature"
@@ -123,6 +123,8 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
+                        android:layout_marginStart="8dp"
+                        android:layout_marginEnd="2dp"
                         android:id="@+id/AcTempStat"
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
