--- a/app/src/main/res/layout/oven.xml
+++ b/app/src/main/res/layout/oven.xml
@@ -126,6 +126,8 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
+                        android:layout_marginEnd="2dp"
+                        android:layout_marginStart="8dp"
                         android:id="@+id/OvenTempStat"
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
