--- a/app/src/main/res/layout/refrigerator.xml
+++ b/app/src/main/res/layout/refrigerator.xml
@@ -79,6 +79,8 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
+                        android:layout_marginStart="8dp"
+                        android:layout_marginEnd="2dp"
                         android:id="@+id/FridgeTempStat"
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
@@ -117,6 +119,8 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
+                        android:layout_marginStart="8dp"
+                        android:layout_marginEnd="2dp"
                         android:id="@+id/FreezerTempStat"
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
