--- a/app/src/main/res/layout-large/activity_home.xml
+++ b/app/src/main/res/layout-large/activity_home.xml
@@ -3,51 +3,59 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".Home"
-    android:layout_height="match_parent"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:weightSum="1">
+    android:weightSum="1"
+    tools:context=".Home">
 
     <RelativeLayout
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="0.5"
-        android:layout_width="0dp">
+        android:layout_weight="0.5">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/main_toolbar"
             android:layout_width="match_parent"
-            android:theme="@style/AppTheme.ActionBarTheme"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
             android:backgroundTint="?attr/colorPrimary"
             android:minHeight="?attr/actionBarSize"
+            android:theme="@style/AppTheme.ActionBarTheme"
             app:titleTextColor="?attr/titleColor" />
 
-        <FrameLayout
-            android:id="@+id/main_frame"
+        <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/swiperefresh"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/main_toolbar"
-            android:layout_alignParentStart="true" />
+            android:layout_below="@+id/main_toolbar">
+
+            <FrameLayout
+                android:id="@+id/main_frame"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/main_toolbar"
+                android:layout_alignParentStart="true" />
+
+        </android.support.v4.widget.SwipeRefreshLayout>
 
         <include layout="@layout/layout_bottom_navigation" />
 
     </RelativeLayout>
 
     <RelativeLayout
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="0.5"
-        android:layout_width="0dp">
+        android:layout_weight="0.5">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/device_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:theme="@style/AppTheme.ActionBarTheme"
             android:background="?attr/colorPrimary"
             android:backgroundTint="?attr/colorPrimary"
             android:minHeight="?attr/actionBarSize"
+            android:theme="@style/AppTheme.ActionBarTheme"
             app:titleTextColor="?attr/titleColor" />
 
         <FrameLayout
