--- a/app/src/main/res/layout/fragment_devices.xml
+++ b/app/src/main/res/layout/fragment_devices.xml
@@ -7,18 +7,6 @@
     android:layout_marginBottom="50dp"
     tools:context=".DevicesFragment">
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/play_routine_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
-        android:layout_margin="26dp"
-        android:clickable="true"
-        android:elevation="5dp"
-        android:focusable="true"
-        android:src="@android:drawable/ic_media_play"
-        app:backgroundTint="@color/colorAccent" />
-
     <android.support.v7.widget.RecyclerView
         android:id="@+id/devices_recyclerview"
         android:layout_width="match_parent"
@@ -33,5 +21,17 @@
         android:gravity="center"
         android:text=""
         android:textSize="20sp" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/play_routine_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="26dp"
+        android:clickable="true"
+        android:elevation="5dp"
+        android:focusable="true"
+        android:src="@android:drawable/ic_media_play"
+        app:backgroundTint="@color/colorAccent" />
 
 </FrameLayout>
